
syntax = "proto3";
option csharp_namespace = "CDN.GRPC.protobuf";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
package google.protobuf;



service FileSystemGRPC
{

    rpc FileOnChange(stream FileOnChangeData)returns(Response) ;
    rpc FileOnCreate(stream FileOnCreateData)returns(Response) ;
    rpc FileSystemOnStart(stream FileDetailsMD5)returns(stream FileDetails) ;
}


message FileDetailsMD5
{
  string Filepath=1;
   string FileName=2;
   string Extention=3;
    string MD5Hash=6;
}

message FileOnChangeData
{
  string OldPath=1;
  string NewPath=2;
   string FileName=3;
   string Extention=4;
  string OperationType=5;
    bytes Content=6;
}

message FileOnCreateData
{
  string Filepath=1;
   string FileName=2;
   string Extention=3;
   string OperationType=4;
    bytes Content=5;
}

message Response{
 bool success=1;
  string Error=2;

}

message FileDetails{
  Response response=1;
  FileOnChangeData file=2;
}

